--- a/playbooks/m4e.yml
+++ b/playbooks/m4e.yml
@@ -6,9 +6,9 @@
     - operator_sdk.util
   tasks:
     - import_role:
-        name: "m4e"
+        name: krestomatio.k8s.v1alpha1.m4e.M4e
 
-- name: php routines
+- name: moodle routines
   hosts: "{{ pods_ready_group }}:&{{ php_fpm_container_group }}"
   run_once: true
   gather_facts: false
@@ -19,5 +19,5 @@
     - name: include routines
       when: "php_fpm_state == 'present'"
       import_role:
-        name: "m4e"
-        tasks_from: php-routines.yml
+        name: krestomatio.k8s.v1alpha1.m4e.M4e
+        tasks_from: moodle-routines.yml
