--- a/playbooks/m4e.yml
+++ b/playbooks/m4e.yml
@@ -6,7 +6,7 @@
     - operator_sdk.util
   tasks:
     - import_role:
-        name: krestomatio.k8s.v1alpha1.m4e.M4e
+        name: krestomatio.k8s.v1alpha1.m4e.m4e
 
 - name: moodle routines
   hosts: "{{ pods_ready_group }}:&{{ php_fpm_container_group }}"
@@ -19,5 +19,5 @@
     - name: include routines
       when: "php_fpm_state == 'present'"
       import_role:
-        name: krestomatio.k8s.v1alpha1.m4e.M4e
+        name: krestomatio.k8s.v1alpha1.m4e.m4e
         tasks_from: moodle-routines.yml
