--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -6,9 +6,11 @@ driver:
 lint: |
   set -e
   yamllint -d "{extends: relaxed, rules: {line-length: {max: 120}}}" .
-  yamllint roles/*
-  ansible-lint roles/*
-  flake8 roles/*
+  if [ -d roles ]; then
+    yamllint roles/*
+    ansible-lint roles/*
+    flake8 roles/*
+  fi
 platforms:
   - name: cluster
     groups:
