--- a/molecule/default/tasks/m4e_test.yml
+++ b/molecule/default/tasks/m4e_test.yml
@@ -1,27 +1,30 @@
 ---
-- name: Create the m4e.krestomat.io/v1alpha1.M4e
-  k8s:
-    state: present
-    namespace: '{{ namespace }}'
-    definition: "{{ lookup('template', '/'.join([samples_dir, cr_file])) | from_yaml }}"
-    wait: yes
-    wait_timeout: 600
-    wait_condition:
-      type: Running
-      reason: Successful
-      status: "True"
-  vars:
-    cr_file: 'm4e_v1alpha1_m4e.yaml'
+- name: cr
+  block:
+    - name: Create the m4e.krestomat.io/v1alpha1.M4e
+      k8s:
+        state: present
+        namespace: '{{ namespace }}'
+        definition: "{{ lookup('template', '/'.join([samples_dir, cr_file])) | from_yaml }}"
+        wait: yes
+        wait_timeout: 600
+        wait_condition:
+          type: Running
+          reason: Successful
+          status: "True"
+      vars:
+        cr_file: 'm4e_v1alpha1_m4e.yaml'
 
-- name: Remove the m4e.krestomat.io/v1alpha1.M4e
-  when: cr_removal
-  k8s:
-    state: absent
-    namespace: '{{ namespace }}'
-    definition: "{{ lookup('template', '/'.join([samples_dir, cr_file])) | from_yaml }}"
-    wait: true
-  vars:
-    cr_file: 'm4e_v1alpha1_m4e.yaml'
+  always:
+    - name: Remove the m4e.krestomat.io/v1alpha1.M4e
+      when: cr_removal
+      k8s:
+        state: absent
+        namespace: '{{ namespace }}'
+        definition: "{{ lookup('template', '/'.join([samples_dir, cr_file])) | from_yaml }}"
+        wait: true
+      vars:
+        cr_file: 'm4e_v1alpha1_m4e.yaml'
 
 # - name: Add assertions here
 #   assert:
