--- a/molecule/default/tasks/m4e_test.yml
+++ b/molecule/default/tasks/m4e_test.yml
@@ -1,30 +1,23 @@
 ---
-- name: cr
-  block:
-    - name: Create the m4e.krestomat.io/v1alpha1.M4e
-      k8s:
-        state: present
-        namespace: '{{ namespace }}'
-        definition: "{{ lookup('template', '/'.join([samples_dir, cr_file])) | from_yaml }}"
-        wait: yes
-        wait_timeout: 600
-        wait_condition:
-          type: Running
-          reason: Successful
-          status: "True"
-      vars:
-        cr_file: 'm4e_v1alpha1_m4e.yaml'
+- name: Create the m4e.krestomat.io/v1alpha1.M4e
+  k8s:
+    state: present
+    namespace: '{{ namespace }}'
+    definition: "{{ lookup('template', '/'.join([samples_dir, cr_file])) | from_yaml }}"
+    wait: yes
+    wait_timeout: 600
+    wait_condition:
+      type: Running
+      reason: Successful
+      status: "True"
 
-  always:
-    - name: Remove the m4e.krestomat.io/v1alpha1.M4e
-      when: cr_removal
-      k8s:
-        state: absent
-        namespace: '{{ namespace }}'
-        definition: "{{ lookup('template', '/'.join([samples_dir, cr_file])) | from_yaml }}"
-        wait: true
-      vars:
-        cr_file: 'm4e_v1alpha1_m4e.yaml'
+- name: Remove the m4e.krestomat.io/v1alpha1.M4e
+  when: lookup('k8s', api_version='apiextensions.k8s.io/v1', kind='CustomResourceDefinition', resource_name='m4es.m4e.krestomat.io')
+  k8s:
+    state: absent
+    namespace: '{{ namespace }}'
+    definition: "{{ lookup('template', '/'.join([samples_dir, cr_file])) | from_yaml }}"
+    wait: true
 
 # - name: Add assertions here
 #   assert:
