ci: add require run

--- a/.lighthouse/jenkins-x/triggers.yaml
+++ b/.lighthouse/jenkins-x/triggers.yaml
@@ -4,15 +4,14 @@ spec:
   presubmits:
   - name: k8s
     context: "k8s"
-    always_run: true
-    optional: false
+    always_run: false
+    require_run: true
     trigger: (?m)^/test( all| k8s),?(s+|$)
     rerun_command: /test k8s
     source: "pullrequest.yaml"
   - name: lint
     context: "lint"
     always_run: true
-    optional: false
     trigger: (?m)^/test( all| lint),?(s+|$)
     rerun_command: /test lint
     source: "pullrequest.yaml"
