--- a/playbooks/m4e.yml
+++ b/playbooks/m4e.yml
@@ -9,15 +9,14 @@
         name: krestomatio.k8s.v1alpha1.m4e.m4e
 
 - name: moodle routines
-  hosts: "{{ pods_ready_group }}:&{{ php_fpm_container_group }}"
-  run_once: true
+  hosts: "{{ pods_ready_group }}:&{{ moodle_container_group }}"
   gather_facts: false
   collections:
     - community.kubernetes
     - operator_sdk.util
   tasks:
-    - name: include routines
-      when: "php_fpm_state == 'present'"
+    - name: import moodle routines
+      when: "moodle_state == 'present'"
       import_role:
         name: krestomatio.k8s.v1alpha1.m4e.m4e
         tasks_from: moodle-routines.yml
