refactor: change expose name variables for ingress name

--- a/config/samples/m4e_v1alpha1_m4e.yaml
+++ b/config/samples/m4e_v1alpha1_m4e.yaml
@@ -31,9 +31,9 @@ spec:
   # moodle_update_major: false
 
 
-  ## Moodle host and protocol. Default is not tls (http)
-  # fqdn: "m4e.krestomat.io"
-  # expose_tls: false
+  ## Moodle host and protocol. Default is 'http'
+  # moodle_host: "m4e.krestomat.io"
+  # moodle_protocol: http
 
   ## Moodledata storage
   # moodle_pvc_moodledata_size: 1Gi
