ci: use a custom nameprefix for each pipeline

--- a/molecule/default/destroy.yml
+++ b/molecule/default/destroy.yml
@@ -35,3 +35,8 @@
       command: '{{ kustomize }} edit set namespace m4e-test'
       args:
         chdir: '{{ config_dir }}/testing'
+
+    - name: Unset testing nameprefix
+      command: '{{ kustomize }} edit set nameprefix m4e-'
+      args:
+        chdir: '{{ config_dir }}/testing'
