--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -21,6 +21,7 @@ provisioner:
     group_vars:
       all:
         namespace: "{{ lookup('env', 'TEST_OPERATOR_NAMESPACE') | default('m4e-test',true) }}"
+        nameprefix: "{{ lookup('env', 'TEST_OPERATOR_NAMEPREFIX') | default('m4e-',true) }}"
     host_vars:
       localhost:
         ansible_python_interpreter: '{{ ansible_playbook_python }}'
