ci: add option to omit CRD deletion
In some environments, where a CRD is already installed, preserving it could make sense.
It should be noted that this can generate unwanted behavior in running CRs,
due to differences in previous and new CRDs versions

--- a/molecule/default/kustomize.yml
+++ b/molecule/default/kustomize.yml
@@ -9,6 +9,7 @@
   changed_when: false
 
 - name: Set resources to {{ state }}
+  when: "not (omit_crds_deletion and state == 'absent' and item.kind == 'CustomResourceDefinition')"
   k8s:
     definition: '{{ item }}'
     state: '{{ state }}'
