refactor(m4e): set moodledata pvc rwo as default

--- a/config/samples/m4e_v1alpha1_m4e.yaml
+++ b/config/samples/m4e_v1alpha1_m4e.yaml
@@ -37,7 +37,7 @@ spec:
 
   ## Moodledata storage
   # moodle_pvc_moodledata_size: 1Gi
-  # moodle_pvc_moodledata_storage_access_mode: ReadWriteMany
+  # moodle_pvc_moodledata_storage_access_mode: ReadWriteOnce
   # moodle_pvc_moodledata_storage_class_name: false
 
   ## Number of replicas
