feat: add routine api

--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -3,4 +3,5 @@
 # It should be run by config/default
 resources:
 - bases/m4e.krestomat.io_m4es.yaml
+- bases/m4e.krestomat.io_routines.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
