--- a/watches.yaml
+++ b/watches.yaml
@@ -3,11 +3,20 @@
 - version: v1alpha1
   group: m4e.krestomat.io
   kind: M4e
-  reconcilePeriod: 1m
+  watchDependentResources: false
   finalizer:
     name: m4e.krestomat.io/finalizer
     vars:
       cr_state: absent
   playbook: playbooks/m4e.yml
+
+- version: v1alpha1
+  group: m4e.krestomat.io
+  kind: Routine
+  watchDependentResources: false
+  reconcilePeriod: 1m
+  playbook: playbooks/routine.yml
+  vars:
+    cr_kind: Routine
 
 #+kubebuilder:scaffold:watch
