feat: update to operator sdk 1.15.0

--- a/playbooks/m4e.yml
+++ b/playbooks/m4e.yml
@@ -2,7 +2,7 @@
   hosts: localhost
   gather_facts: false
   collections:
-    - community.kubernetes
+    - kubernetes.core
     - operator_sdk.util
   tasks:
     - import_role:
