--- a/requirements.yml
+++ b/requirements.yml
@@ -2,6 +2,10 @@
 collections:
   - name: community.kubernetes
     version: "1.2.1"
+  - name: kubernetes.core
+    version: "2.2.0"
+  - name: cloud.common
+    version: "2.0.4"
   - name: operator_sdk.util
     version: "0.2.0"
   # Git is available until ansible >= 2.10
