--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -10,6 +10,10 @@ configMapGenerator:
 - files:
   - controller_manager_config.yaml
   name: manager-config
+
+patchesStrategicMerge:
+- enable_turbo_patch.yaml
+
 images:
 - name: controller
   newName: quay.io/krestomatio/m4e-operator
