feat: add profile task patch

--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -13,6 +13,7 @@ configMapGenerator:
 
 patchesStrategicMerge:
 - enable_turbo_patch.yaml
+# - profile_tasks_patch.yaml
 
 images:
 - name: controller
