--- a/config/testing/kustomization.yaml
+++ b/config/testing/kustomization.yaml
@@ -10,6 +10,14 @@ patchesStrategicMerge:
 - manager_image.yaml
 - debug_logs_patch.yaml
 - ../default/manager_auth_proxy_patch.yaml
+- ../manager/profile_tasks_patch.yaml
 images:
 - name: testing
   newName: testing-operator
+patches:
+- patch: |-
+    - op: add
+      path: /spec/template/spec/containers/0/args/-
+      value: --zap-devel=true
+  target:
+    kind: Deployment
