refactor: add workaround for configmap reconciliation trigger issue

--- a/watches.yaml
+++ b/watches.yaml
@@ -4,10 +4,14 @@
   group: m4e.krestomat.io
   kind: M4e
   blacklist:
-    # issue seing other secrets as dependant resources and triggering reconciliation
+    # issue seing other secrets as dependant resources and triggering reconciliation (at least in logs)
     - group: ""
       version: v1
       kind: Secret
+    # issue seing other config maps as dependant resources and triggering reconciliation (at least in logs)
+    - group: ""
+      version: v1
+      kind: ConfigMap
     # issue detecting cronjob update and triggering reconciliation
     - group: batch
       version: v1beta1
