--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -121,4 +121,21 @@ rules:
       - patch
       - update
       - watch
+  ##
+  ## Rules for m4e.krestomat.io/v1alpha1, Kind: Nginx
+  ##
+  - apiGroups:
+      - m4e.krestomat.io
+    resources:
+      - nginxes
+      - nginxes/status
+      - nginxes/finalizers
+    verbs:
+      - create
+      - delete
+      - get
+      - list
+      - patch
+      - update
+      - watch
 #+kubebuilder:scaffold:rules
