--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -138,4 +138,21 @@ rules:
       - patch
       - update
       - watch
+  ##
+  ## Rules for m4e.krestomat.io/v1alpha1, Kind: Phpfpm
+  ##
+  - apiGroups:
+      - m4e.krestomat.io
+    resources:
+      - phpfpms
+      - phpfpms/status
+      - phpfpms/finalizers
+    verbs:
+      - create
+      - delete
+      - get
+      - list
+      - patch
+      - update
+      - watch
 #+kubebuilder:scaffold:rules
