refactor: rename tasks and roles

--- a/playbooks/php_fpm.yml
+++ b/playbooks/php_fpm.yml
@@ -6,4 +6,4 @@
     - operator_sdk.util
   tasks:
     - import_role:
-        name: krestomatio.k8s.v1alpha1.m4e.php-fpm
+        name: krestomatio.k8s.v1alpha1.m4e.php_fpm
