--- a/config/crd/bases/m4e.krestomat.io_routines.yaml
+++ b/config/crd/bases/m4e.krestomat.io_routines.yaml
@@ -38,6 +38,19 @@ spec:
             type: object
             x-kubernetes-preserve-unknown-fields: true
         type: object
+    additionalPrinterColumns:
+    - description: Age of the resource
+      jsonPath: .metadata.creationTimestamp
+      name: AGE
+      type: date
+    - description: Routine failure status
+      jsonPath: .status.conditions[?(@.type=="Failure")].status
+      name: FAILURE
+      type: string
+    - description: Time of latest transition
+      jsonPath: .status.conditions[?(@.type=="Failure")].lastTransitionTime
+      name: SINCE
+      type: date
     served: true
     storage: true
     subresources:
