--- a/config/crd/bases/m4e.krestomat.io_m4es.yaml
+++ b/config/crd/bases/m4e.krestomat.io_m4es.yaml
@@ -39,19 +39,23 @@ spec:
             x-kubernetes-preserve-unknown-fields: true
         type: object
     additionalPrinterColumns:
+    - description: Age of the resource
+      jsonPath: .metadata.creationTimestamp
+      name: AGE
+      type: date
     - description: Site status such as Unknown/SettingUp/Ready/Failed/Terminating
         etc
       jsonPath: .status.state
       name: STATUS
       type: string
+    - description: Time of latest transition
+      jsonPath: .status.conditions[?(@.type=="Failure")].lastTransitionTime
+      name: SINCE
+      type: date
     - description: Site URL
       jsonPath: .status.url
       name: URL
       type: string
-    - description: Age of the resource
-      jsonPath: .metadata.creationTimestamp
-      name: AGE
-      type: date
     served: true
     storage: true
     subresources:
