ci: add ansible argument when testing

--- a/config/testing/kustomization.yaml
+++ b/config/testing/kustomization.yaml
@@ -19,5 +19,8 @@ patches:
     - op: add
       path: /spec/template/spec/containers/0/args/-
       value: --zap-devel=true
+    - op: add
+      path: /spec/template/spec/containers/0/args/-
+      value: --ansible-args='-D'
   target:
     kind: Deployment
