--- a/config/crd/bases/m4e.krestomat.io_m4es.yaml
+++ b/config/crd/bases/m4e.krestomat.io_m4es.yaml
@@ -49,7 +49,7 @@ spec:
       name: STATUS
       type: string
     - description: Time of latest transition
-      jsonPath: .status.conditions[?(@.type=="Failure")].lastTransitionTime
+      jsonPath: .status.conditions[?(@.type=='Ready')].lastTransitionTime
       name: SINCE
       type: date
     - description: Site URL
