doc: change moodle image name ref

--- a/config/samples/m4e_v1alpha1_m4e.yaml
+++ b/config/samples/m4e_v1alpha1_m4e.yaml
@@ -76,9 +76,9 @@ spec:
     error_page 404 /error/index.php;    error_page 403 =404 /error/index.php;
 
   ## Container images
-  # moodleImage: quay.io/krestomatio/moodle_web
-  # nginxImage: quay.io/krestomatio/moodle_web
-  # phpFpmImage: quay.io/krestomatio/moodle_web
+  # moodleImage: quay.io/krestomatio/moodle
+  # nginxImage: quay.io/krestomatio/moodle
+  # phpFpmImage: quay.io/krestomatio/moodle
 
   ## Other integrations
   ### postgres-operator:
