--- a/.lighthouse/jenkins-x/pullrequest.yaml
+++ b/.lighthouse/jenkins-x/pullrequest.yaml
@@ -20,9 +20,12 @@ spec:
               - name: PROJECT_TIMESTAMP
                 value: midnight
             resources:
-              requests:
+              limits:
                 cpu: 400m
                 memory: 512Mi
+              requests:
+                cpu: 50m
+                memory: 32Mi
             workingDir: /workspace/source
           steps:
             - image: uses:krestomatio/jx3-pipeline-catalog/tasks/git-clone/git-clone-pr.yaml@11f0934b9c616f56580f9fc6b71ce48ffc2ffe29
@@ -34,6 +37,10 @@ spec:
                 - make
               securityContext:
                 privileged: true
+              resources:
+                requests:
+                  cpu: 0.1
+                  memory: 128Mi
               volumeMounts:
                 - name: libcontainers
                   mountPath: /var/lib/containers
