--- a/.lighthouse/jenkins-x/release.yaml
+++ b/.lighthouse/jenkins-x/release.yaml
@@ -31,6 +31,7 @@ spec:
             - image: uses:krestomatio/jx3-pipeline-catalog/tasks/git-clone/git-clone.yaml@11f0934b9c616f56580f9fc6b71ce48ffc2ffe29
             - image: ghcr.io/jenkins-x/jx-changelog:0.0.47
               name: changelog
+              resources: {}
               args:
               - changelog
               command:
@@ -47,6 +48,7 @@ spec:
                   memory: 128Mi
             - image: quay.io/krestomatio/ansible-operator-ci
               name: promote
+              resources: {}
               args:
               - promote
               command:
