--- a/config/testing/kustomization.yaml
+++ b/config/testing/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
 patchesStrategicMerge:
 - manager_image.yaml
 - debug_logs_patch.yaml
+- watch_namespace_patch.yaml
 - ../default/manager_auth_proxy_patch.yaml
 - ../manager/profile_tasks_patch.yaml
 images:
