--- a/config/samples/m4e_v1alpha1_moodle.yaml
+++ b/config/samples/m4e_v1alpha1_moodle.yaml
@@ -1,10 +1,10 @@
 ### camelCase
 ---
 apiVersion: m4e.krestomat.io/v1alpha1
-kind: M4e
+kind: Moodle
 metadata:
   # name should be less than 26 characters
-  name: m4e-sample
+  name: moodle-sample
 spec:
   ## Moodle new instance
   # moodleNewInstance: true
