--- a/config/crd/bases/m4e.krestomat.io_moodles.yaml
+++ b/config/crd/bases/m4e.krestomat.io_moodles.yaml
@@ -2,20 +2,20 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: m4es.m4e.krestomat.io
+  name: moodles.m4e.krestomat.io
 spec:
   group: m4e.krestomat.io
   names:
-    kind: M4e
-    listKind: M4eList
-    plural: m4es
-    singular: m4e
+    kind: Moodle
+    listKind: MoodleList
+    plural: moodles
+    singular: moodle
   scope: Namespaced
   versions:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: M4e is the Schema for the m4es API
+        description: Moodle is the Schema for the moodles API
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -30,11 +30,11 @@ spec:
           metadata:
             type: object
           spec:
-            description: Spec defines the desired state of M4e
+            description: Spec defines the desired state of Moodle
             type: object
             x-kubernetes-preserve-unknown-fields: true
           status:
-            description: Status defines the observed state of M4e
+            description: Status defines the observed state of Moodle
             type: object
             x-kubernetes-preserve-unknown-fields: true
         type: object
