--- a/config/rbac/moodle_viewer_role.yaml
+++ b/config/rbac/moodle_viewer_role.yaml
@@ -1,24 +1,20 @@
-# permissions for end users to edit m4es.
+# permissions for end users to view moodles.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: m4e-editor-role
+  name: moodle-viewer-role
 rules:
 - apiGroups:
   - m4e.krestomat.io
   resources:
-  - m4es
+  - moodles
   verbs:
-  - create
-  - delete
   - get
   - list
-  - patch
-  - update
   - watch
 - apiGroups:
   - m4e.krestomat.io
   resources:
-  - m4es/status
+  - moodles/status
   verbs:
   - get
