--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -2,5 +2,5 @@
 # patches:
 # - path: patch/gke/https_lb.yaml # patch to use GKE Ingress for HTTP(S) Load Balancing
 resources:
-- m4e_v1alpha1_m4e.yaml
+- m4e_v1alpha1_moodle.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
