--- a/config/testing/kustomization.yaml
+++ b/config/testing/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: m4e-test
-namePrefix: m4e-
+namespace: moodle-test
+namePrefix: moodle-
 resources:
 - ../crd
 - ../rbac
