--- a/config/testing/postgres/kustomization.yaml
+++ b/config/testing/postgres/kustomization.yaml
@@ -1,8 +1,8 @@
 # Install postgres operator
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: m4e-test
-namePrefix: m4e-
+namespace: moodle-test
+namePrefix: moodle-
 resources:
 - github.com/krestomatio/postgres-operator/config/default?ref=main
 patches:
