--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -51,10 +51,10 @@ spec:
         # More info: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
         resources:
           limits:
-            cpu: 500m
-            memory: 768Mi
+            cpu: 1
+            memory: 1024Mi
           requests:
-            cpu: 10m
+            cpu: 100m
             memory: 256Mi
       serviceAccountName: controller-manager
       terminationGracePeriodSeconds: 10
